<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TwitterSearchApp</string>

    <string name="action_settings">Settings</string>
   	<string name="searchURL">http://twitter.com/search?q=</string>
	<string name="tagPrompt">Enter tag name</string>
	<string name="queryPrompt">Enter Twitter search query here</string>
	<string name="taggedSearches">Tagged Searches</string>
	<string name="edit">Edit</string>
	<string name="clearTags">Clear Tags</string>
	<string name="save">Save</string>
	<string name="yes">Yes</string>
	<string name="cancel">Cancel</string>
	<string name="OK">OK</string>
	<string name="missingTitle">Missing Text</string>
	<string name="missingMessage">Please enter a search query and tag name</string>
	<string name="confirmTitle">Are You Sure?</string>
	<string name="confirmMessage">Do you wish to delete all Tagged Searches?</string>
</resources>
