<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="5dp"
    android:stretchColumns="*" >

    <TableRow
        android:id="@+id/tableRow0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/queryEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_span="2"
            android:hint="@string/queryPrompt"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:singleLine="true" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/tagEditText"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="3"
            android:hint="@string/tagPrompt"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:singleLine="true" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/save" />

    </TableRow>

   	<TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:background="@color/light_orange" >

   		<TextView
   		    android:id="@+id/taggedSearchesTextView"
   		    android:layout_width="match_parent"
   		    android:layout_height="wrap_content"
   		    android:layout_gravity="center_horizontal"
   		    android:layout_span="2"
   		    android:textColor="@android:color/black"
   		    android:textSize="18sp"
   		    android:padding="5dp"
   		    android:text="@string/taggedSearches" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/light_orange" >

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:scrollbars="vertical" >
	        <TableLayout
	            android:id="@+id/tagListTableLayout"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:stretchColumns="0" />
		</ScrollView>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
		
        <Button
            android:id="@+id/clearTagsButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_span="2"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/clearTags" />
   	</TableRow>

</TableLayout>
